# oze-canopen-viewer

./: CHANGELOG.md  Cargo.toml  readme.md
.github/: release-please-config.json
.github/workflows/: build.yml  release-please.yml
deb/maintainer-scripts/: postinst
doc/: description.md  description_ru.md  doc.excalidraw
docker/: Dockerfile  docker-compose.yml
src/: bitrate.rs  chart.rs  driver.rs  filter.rs  filter_data_panel.rs  filter_panel.rs  gui.rs  lib.rs  main.rs  message_cached.rs  message_row.rs  pinned_filter.rs  theme.rs  viewer.rs
tests/: test_driver.rs
